[gd_scene load_steps=8 format=3 uid="uid://xwd1n1lo0jlk"]

[ext_resource type="Script" uid="uid://bak6b8se7fk2k" path="res://Script/mirror_new.gd" id="1_m63uv"]
[ext_resource type="Texture2D" uid="uid://bjjajqpualgwk" path="res://Sprite sheet/NEWSPRITESHEET.png" id="1_ouiee"]

[sub_resource type="Animation" id="Animation_m63uv"]
resource_name = "Change_Mirror"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06074497, 0.11761541, 0.17328742),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_x0yru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s16br"]
_data = {
&"Change_Mirror": SubResource("Animation_m63uv"),
&"RESET": SubResource("Animation_x0yru")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgvea"]
size = Vector2(24, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atsgn"]
size = Vector2(15.031334, 16.182795)

[node name="Mirror" type="StaticBody2D"]
script = ExtResource("1_m63uv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 9)
texture = ExtResource("1_ouiee")
hframes = 2
vframes = 2
region_enabled = true
region_rect = Rect2(336, 0, 64, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s16br")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 8.5)
shape = SubResource("RectangleShape2D_kgvea")

[node name="Activate_Radius" type="Area2D" parent="."]
position = Vector2(1.000061, 10)
scale = Vector2(2.4615383, 2.6571429)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activate_Radius"]
modulate = Color(0.30639425, 0.6678538, 0.030069206, 1)
position = Vector2(0.40622568, -1.8817196)
scale = Vector2(0.99999976, 1)
shape = SubResource("RectangleShape2D_atsgn")

[connection signal="body_entered" from="Activate_Radius" to="." method="_on_activate_radius_body_entered"]
[connection signal="body_exited" from="Activate_Radius" to="." method="_on_activate_radius_body_exited"]
